# CreditWise-AI

./: README.md  loanData.csv
.ipynb_checkpoints/: CreditWise-checkpoint.ipynb
creditwise-ai/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
creditwise-ai/.github/workflows/: ci.yml
creditwise-ai/.streamlit/: config.toml  secrets.toml.example
creditwise-ai/app/: pdf_report.py  streamlit_app.py  utils.py
creditwise-ai/app/pages/: 2_🔄_WhatIf.py  3_⚖️_Fairness.py
creditwise-ai/frontend/: fairness.html  index.html  what-if.html
creditwise-ai/saved_models/: model.pkl  model_comparison.csv  model_info.json  preprocessor.pkl  shap_background.parquet  shap_explainer.pkl
creditwise-ai/scratch/: find_images.py  search_transcript.py
creditwise-ai/src/api/: main.py  routes.py  schemas.py
creditwise-ai/src/data/: preprocessing.py
creditwise-ai/src/explain/: llm_explainer.py  shap_explainer.py
creditwise-ai/src/mlops/: mlflow_logger.py
creditwise-ai/src/models/: evaluate.py  train.py
creditwise-ai/tests/: test_api.py  test_models.py  test_preprocessing.py
frontend/creditwise_ai/: DESIGN.md
frontend/fairness_bias_audit_creditwise_ai/: code.html
frontend/loan_assessment_creditwise_ai/: code.html
frontend/what_if_analyzer_creditwise_ai/: code.html
