[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "creditwise-ai"
version = "1.0.0"
description = "Production-grade loan approval intelligence platform with XGBoost, SHAP, FastAPI and Claude AI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Guradesh Dhillon" },
]
keywords = [
    "machine-learning",
    "loan-approval",
    "xgboost",
    "fastapi",
    "shap",
    "anthropic",
    "mlops",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage   = "https://github.com/your-username/creditwise-ai"
Repository = "https://github.com/your-username/creditwise-ai"

# ── Ruff linter / formatter configuration ─────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length    = 100
exclude = [
    ".git",
    "venv",
    "__pycache__",
    "notebooks",
    "saved_models",
    "mlruns",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "C4",   # flake8-comprehensions
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # FastAPI uses function calls in default arguments
    "N803",   # Argument name should be lowercase (keeps SHAP API compat)
    "N806",   # Variable in function should be lowercase
    "UP007",  # Use X | Y for type hints — keep compat with 3.9
    "RUF012", # Mutable class attr — Pydantic models use this pattern
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pytest configuration ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    "ignore::UserWarning",
]

# ── Coverage (optional: pip install pytest-cov) ────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit   = ["*/tests/*", "*/venv/*", "*/notebooks/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under   = 60
